package com.vanskarner.singleadapter;

public interface BindItem {
}
