@startuml
'https://plantuml.com/class-diagram

/'Specification of classes and interfaces'/
class SingleAdapter{

    + SingleAdapter()
    + onCreateViewHolder(ViewGroup, int): RecyclerView.ViewHolder
    + onBindViewHolder(RecyclerView.ViewHolder, int): void
    + getItemViewType(int): int
    + getItemCount(): int
    + isLoad(int): boolean
    + add(BindAdapter): void
    + set(List<? extends BindItem>): void
    + set(BaseDiffCallback<? extends BindItem>): void
    + set(int): void
    + setVisibleProgress(boolean): void
    + getItem(int): <T extends BindItem> T
    + getDiffCallback(): BaseDiffCallback<? extends BindItem>
    + getProgressLayoutId(): int
    + isAdapterPresent(BindAdapter): boolean
    - getList(): List<BindItem>
    - getBindItem(int): BindItem
    - filterMap(int): Map.Entry<Integer, BindAdapter<BindItem, RecyclerView.ViewHolder>>
    - isCorrectBindAdapter(BindAdapter, BindItem): boolean
    - filterError(BindItem): RuntimeException
}
class EndlessLoad{

    + EndlessLoad(AsyncListDiffer<BindItem>)
    + getAdapter(): LoadAdapter
    + isLoadInstance(BindItem): boolean
    + setVisibleProgress(boolean): void
    - createItems(): List<BindItem>
}
class LoadAdapter{
    - layoutId: int

    + LoadAdapter()
    + setLayoutId(int): void
    + getLayoutId(): int
}
class LoadBindItem
abstract class BaseDiffCallback<BI extends BindItem>
class DefaultBaseDiff
interface BindItem
interface OnCreateVH<VH extends RecyclerView.ViewHolder>{
    + onCreateViewHolder(ViewGroup, LayoutInflater): VH
}
interface OnBindVH<BI extends BindItem,VH extends RecyclerView.ViewHolder>{
    + onBindViewHolder(VH, BI): void
}
interface BindAdapter<BI extends BindItem,VH extends RecyclerView.ViewHolder>{
    + getClassItem(): Class<BI>
    + filter(BI): boolean
}
class LoadViewHolder

/'Relations'/
SingleAdapter --> "1" BaseDiffCallback : -defaultDiff
SingleAdapter --> "1" EndlessLoad : -endlessLoad
SingleAdapter --> "0..*" BindItem : -listDiffer
SingleAdapter --> "1..*" BindAdapter : -mapAdapter
BindAdapter --|> OnCreateVH
BindAdapter --|> OnBindVH
BaseDiffCallback <|-- DefaultBaseDiff
EndlessLoad --> "1" LoadAdapter : adapter
EndlessLoad --> "1" LoadBindItem :loadItem
EndlessLoad --> "0..*" BindItem : - listDiffer
LoadAdapter ..|> OnCreateVH
LoadBindItem ..|> BindItem
LoadViewHolder --+ LoadAdapter

/'visual customization'/
hide LoadViewHolder members
hide LoadBindItem members
hide BaseDiffCallback members
hide DefaultBaseDiff members
hide BindItem members
hide OnCreateVH attributes
hide BindAdapter attributes
hide OnBindVH attributes
interface BindItem #paleGreen
interface OnCreateVH #paleGreen
interface OnBindVH #paleGreen
interface BindAdapter #paleGreen
class SingleAdapter #deepskyblue
abstract class BaseDiffCallback #deepskyblue
class EndlessLoad #deepskyblue
class DefaultBaseDiff #deepskyblue
class LoadBindItem #deepskyblue
class LoadViewHolder #deepskyblue
class LoadAdapter #deepskyblue

@enduml